# tabular-rag

./: .gitignore  README.md  chroma_manager.py  ingest.py  llm.py  pyproject.toml  rag_agent.py  requirements.txt  visualize_embeddings.py
data/: vehicle_sales_data.csv
